src/objects/CDA_Account__c.object
<CustomObject>
    <description>Separate table of Accounts for CDA project.</description>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>IMS Org</fullName>
                </value>
                <value>
                    <fullName>CDA Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDA_Account_Lookup_Subtitle__c</fullName>
        <description>Competitor_flag__c  + Complete_Address__c</description>
        <formula>&apos;Competitor Flag: &apos; &amp;  IF(Competitor_flag__c, &apos;Yes&apos;, &apos;No&apos;)  &amp; &apos; --- Address: &apos; &amp; Complete_Address__c</formula>
        <label>CDA Account Lookup Subtitle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDA_Account_Name__c</fullName>
        <description>Enhanced Name field for CDA Account Records with limit 255 characters</description>
        <label>CDA Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDA_Auditor_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDA Auditor Indicator</description>
        <label>CDA Auditor Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDA_Customer_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDA Customer Indicator</description>
        <label>CDA Customer Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDA_Sponsor_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDA Sponsor Indicator</description>
        <label>CDA Sponsor Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDA_Vendor_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CDA Vendor Indicator</description>
        <label>CDA Vendor Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEVA_Committee_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Cda type is CEVA and recipient is added</description>
        <label>CEVA Committee Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEVA_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CEVA Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitor flag.</description>
        <label>Competitor flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Address__c</fullName>
        <formula>Street__c+ IF(ISBLANK(Street__c), &apos;&apos;, &apos;, &apos;) +City__c+ IF(ISBLANK(City__c), &apos;&apos;, &apos;, &apos;) +State__c+ IF(ISBLANK(State__c), &apos;&apos;, &apos; &apos;) +Zip_Postal_Code__c+ IF(ISBLANK(Zip_Postal_Code__c), &apos;&apos;, &apos; &apos;) +Country__c</formula>
        <label>Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Indicator__c</fullName>
        <label>Individual Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
    	<fullName>Is_Master_Account__c</fullName>
    	<defaultValue>false</defaultValue>
    	<label>Is Master Account</label>
    	<type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is created for the data migration process.</description>
        <externalId>true</externalId>
        <label>Legacy id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CDA Account</label>
    <nameField>
        <label>CDA Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDA Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>